--- a/templates/blog-details.html
+++ b/templates/blog-details.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
+{% block title %} {{ post.title }} - Blog Details {% endblock %}
 {% block content %}
 <section class="mb-30px">
       <div class="container">
